--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,12 +36,10 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
-          cache-dependency-path: resume-website/package-lock.json
+          cache-dependency-path: package-lock.json
       - name: Install dependencies
-        working-directory: ./resume-website
         run: npm install
       - name: Build
-        working-directory: ./resume-website
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -49,7 +47,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: './resume-website/dist'
+          path: './dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
