--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "i18next": "^25.7.3",
     "i18next-http-backend": "^3.0.2",
     "react": "^18.2.0",
